@@ -1,6 +1,7 @@
 ﻿- Add manual translation selection option
 - Update translation framework to latest version with improved fallback language detection
 - Allow for longer translation strings in dropdown menu widths
+- Reduce memory use: don't generate disabled thumbnails
 - Standardise exception logging
 
 
